Changed files to php, removed repeat code

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 	</head>
 	
 	<body style="padding-top: 70px">
+	
 		<div class="container-fluid">
 			<nav class="navbar navbar-expand bg-dark fixed-top">
 				<a href="./index.html" class="navbar-brand text-light">Hadrosaur Productions</a>
@@ -53,7 +54,7 @@
 		<div class="container">
 			<h3>Send us a Message</h3>
 			<p>Note: This does not work yet</p>
-			<form action="" method="get" class='col-md-8'>
+			<form method="post" action="" class="col-md-8">
 				<div class="form-group">
 					<label for="name">Name</label>
 					<input type="text" id="name" class="form-control">
